# tzedek

./: .env.template  .gitignore  Makefile  README.md  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: linters.yml
backend/apps/questions/: admin.py  constants.py  models.py  notifier.py  serializers.py  tasks.py  urls.py  utils.py  views.py
backend/apps/questions/migrations/: 0003_question_chat_session_id_question_success.py
backend/apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/users/migrations/: 0002_alter_users_telegram_id_alter_users_username.py  0004_alter_user_telegram_id.py
backend/core/: celery.py  settings.py  urls.py
docker/: Dockerfile.telegram_bot  Dockerfile.web
parser/: formatter.py  scraper.py
telegram_bot/: __main__.py  autoreload.py  constants.py  handlers.py  keyboards.py  states.py  utils.py
web/: gunicorn_config.py
web/apps/questions/: admin.py  constants.py  models.py  notifier.py  serializers.py  tasks.py  urls.py  utils.py  views.py
web/apps/questions/migrations/: 0001_initial.py  0002_alter_question_message_id.py
web/apps/users/: admin.py  constants.py  models.py  pagination.py  serializers.py  urls.py  views.py
web/apps/users/migrations/: 0001_initial.py  0003_rename_users_user.py  0005_user_language.py  0006_user_access.py
web/core/: middlewares.py  settings.py  urls.py
