[tool.poetry]
name = "tzedek"
version = "0.1.0"
description = ""
authors = ["Michael Kushner"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
aiogram = "^3.17.0"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.0.1"
django-debug-toolbar = "^5.1.0"
whitenoise = "^6.9.0"
redis = "^5.2.1"
django-redis = "^5.4.0"
celery = "^5.5.2"
django-unfold = "^0.55.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"